Fix for bug#24219 ALTER TABLE ... RENAME TO ... , DISABLE KEYS leads to crash

There was an improper order of doing chained operations.

To the documentor: ENABLE|DISABLE KEYS combined with RENAME TO, and no other
ALTER TABLE clause, leads to server crash independent of the presence of
indices and data in the table.